Fix the z-index of the tutorial's first slide

--- a/src/components/TutorialModal.scss
+++ b/src/components/TutorialModal.scss
@@ -68,7 +68,7 @@
         }
       }
 
-      .slick-current:first-child {
+      .slick-current {
         z-index: 10;
       }
 
